--- a/dashboard.css
+++ b/dashboard.css
@@ -90,7 +90,7 @@ nav ul li a:hover::after {
   background: #d2f5f6;
 }
 
-.hero.full-width {
+.hero-content.full-width {
   width: 100dvw;
   max-width: none;
   padding: 2rem;
@@ -98,7 +98,7 @@ nav ul li a:hover::after {
   text-align: center;
 }
 
-.hero-content {
+.hero{
   width: 90%;
   max-width: 800px;
   background-color: #ffffff;
