--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -87,7 +87,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
@@ -97,13 +97,6 @@ body {
   transition: opacity 0.5s ease;
 }
 
-.loader {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
 
 .loader-video {
   width: 200px;
