--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -89,6 +89,7 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
+  margin-top: 50px;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
