--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -89,7 +89,6 @@ body {
   left: 0;
   width: 100%;
   height: 100vh;
-  margin-top: 350px;
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
@@ -105,6 +104,8 @@ body {
   height: 200px;
   object-fit: contain;
   margin: auto;
+  justify-content: center;
+  align-items: center;
   display: block;
 }
 
