--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -82,13 +82,12 @@ body {
 }
 
 
-/* Loader */
 #loader {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100vh; /* or 100% */
   background-color: rgba(255, 255, 255, 0.8);
   display: flex;
   justify-content: center;
@@ -103,10 +102,6 @@ body {
   width: 200px;
   height: 200px;
   object-fit: contain;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  display: flex;
 }
 
 /* Profile Form Styling */
