--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -81,12 +81,11 @@ body {
   background-color: #0056b3;
 }
 
-
-/* Loader */
 #loader {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
@@ -98,15 +97,10 @@ body {
   transition: opacity 0.5s ease;
 }
 
-
 .loader-video {
   width: 200px;
   height: 200px;
   object-fit: contain;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  display: flex;
 }
 
 /* Profile Form Styling */
