--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -62,7 +62,7 @@ body {
 
 .resume-thumbnail img {
   width: 100%;
-  max-width: 600px;
+  max-width: 700px;
   height: auto;
   margin-bottom: 1rem;
 }
@@ -86,22 +86,15 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
+  width: auto; /* Adjust as needed for the loader size */
+  height: auto; /* Adjust as needed for the loader size */
+  background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  opacity: 1;
-  transition: opacity 0.5s ease;
 }
 
-.loader-video {
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
-}
 
 /* Profile Form Styling */
 .profile-form {
